--- a/app/views/outputs.html
+++ b/app/views/outputs.html
@@ -6,18 +6,16 @@
                 fields="outputs.outputFields"
                 model="output"
                 name="output.name"
-                delete="outputs.removeOutput(output)"
+                remove="outputs.removeOutput(output)"
                 save="outputs.updateOutput(output)"></edit-panel>
   </li>
 </ul>
 
 
 <form ng-submit="outputs.addOutput">
-  <formly-form model="outputs.model" fields="outputs.outputFields" form="output.form" options="output.options">
-    <div class="row collapse">
-      <div class="small-3 columns">
-        <button type="submit" class="button postfix">add</button>
-      </div>
+  <formly-form model="outputs.model" fields="outputs.outputFields" form="output.form" options="output.options" class="row collapse">
+    <div class="small-3 columns" style="padding:0;">
+      <button type="submit" class="button postfix">add</button>
     </div>
   </formly-form>
 </form>
