--- a/app/views/outputs.html
+++ b/app/views/outputs.html
@@ -3,17 +3,16 @@
 <ul class="small-block-grid-1">
   <li ng-repeat="output in outputs.list track by $index">
     <edit-panel class="row collapse"
-                fields="outputs.outputFields"
-                model="output"
-                name="output.name"
+                fields="output.fields"
+                model="output.model"
                 remove="outputs.removeOutput(output)"
                 save="outputs.updateOutput(output)"></edit-panel>
   </li>
 </ul>
 
 
-<form ng-submit="outputs.addOutput">
-  <formly-form model="outputs.model" fields="outputs.outputFields" form="output.form" options="output.options" class="row collapse">
+<form name="addMetric" ng-submit="outputs.addOutput(outputs.model)">
+  <formly-form model="outputs.model" fields="outputs.editFields" form="outputs.form" options="outputs.options" class="row collapse">
     <div class="small-3 columns" style="padding:0;">
       <button type="submit" class="button postfix">add</button>
     </div>
