--- a/app/views/outputs.html
+++ b/app/views/outputs.html
@@ -10,9 +10,8 @@
   </li>
 </ul>
 
-
 <form name="addMetric" ng-submit="outputs.addOutput(outputs.model)">
-  <formly-form model="outputs.model" fields="outputs.editFields" form="outputs.form" options="outputs.options" class="row collapse">
+  <formly-form model="outputs.model" fields="outputs.newOutputFields" form="outputs.form" options="outputs.options" class="row collapse">
     <div class="small-3 columns" style="padding:0;">
       <button type="submit" class="button postfix">add</button>
     </div>
