--- a/app/views/outputs.html
+++ b/app/views/outputs.html
@@ -13,6 +13,7 @@
 <form name="addMetric" ng-submit="outputs.addOutput(outputs.model)">
   <formly-form model="outputs.model" fields="outputs.newOutputFields" form="outputs.form" options="outputs.options" class="row collapse">
     <div class="small-3 columns" style="padding:0;">
+      <label>&nbsp;</label>
       <button type="submit" class="button postfix">add</button>
     </div>
   </formly-form>
