--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,19 @@
 @import "foundation/scss/foundation.scss";
 // endbower
 
-.radio-inline{
-  display:inline-block;
+.radio-inline {
+  display: inline-block;
+
+}
+
+.radio-inline label {
+  display: inline-block;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+  margin-bottom: 0;
+  vertical-align: baseline;
+}
+
+.help-block .error {
+  color: $input-error-message-bg-color;
 }
