--- a/app/views/outputs.html
+++ b/app/views/outputs.html
@@ -6,12 +6,15 @@
                 fields="output.fields"
                 model="output.model"
                 remove="outputs.removeOutput(output)"
-                save="outputs.updateOutput(output)"></edit-panel>
+                save="outputs.updateOutput(output)">
+      <strong ng-bind="output.model.name"></strong>
+    </edit-panel>
   </li>
 </ul>
 
 <form name="addMetric" ng-submit="outputs.addOutput(outputs.model)">
-  <formly-form model="outputs.model" fields="outputs.newOutputFields" form="outputs.form" options="outputs.options" class="row collapse">
+  <formly-form model="outputs.model" fields="outputs.newOutputFields" form="outputs.form" options="outputs.options"
+               class="row collapse">
     <div class="small-3 columns" style="padding:0;">
       <label>&nbsp;</label>
       <button type="submit" class="button postfix">add</button>
